--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -16,11 +16,16 @@
       js = d.createElement(s); js.id = id;
       js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=1620812258194848";
       fjs.parentNode.insertBefore(js, fjs);
+			console.log(FB.getAccessToken);
     }(document, 'script', 'facebook-jssdk'));
+		FB.getLoginStatus(function(response) {
+  if (response.status === 'connected') {
+    console.log(response.authResponse.accessToken);
+  }
+});
   </script>
   <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
-  <button onclick="FB.login()"></button>
-
+	
 </body>
 
 </html>
