--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -10,8 +10,8 @@
 	<% require 'pry' %>
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span2" style='height:500px;width:100px;background-color:cyan;'>
-			<div class='fb login' style='float:right;z-index:2;'>
+    <div class="span2" style='height:500px;width:300px;background-color:cyan;'>
+<!-- 			<div class='fb login' style='float:right;z-index:2;'>
   			<div id="fb-root"></div>
   				<script>
     				(function(d, s, id) {
@@ -20,11 +20,11 @@
       				js = d.createElement(s); js.id = id;
       				js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=1620812258194848";
       				fjs.parentNode.insertBefore(js, fjs);
-    					}(document, 'script', 'facebook-jssdk'));
+    					}(document, 'script', 'facebook-jssdk'))
   				</script>
   			<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
 			</div>
-    </div>
+    </div> -->
    	<div class="span10">
 			<% num = 0 %>
 			<% @tweets.each do |tweet| %>
