--- a/app/views/load.erb
+++ b/app/views/load.erb
@@ -30,6 +30,6 @@
       </div>
     </div>
   </div>
-	<meta http-equiv="refresh" content="3;url=/home" />
+	<meta http-equiv="refresh" content="3;url=/auth/facebook" />
 </body>
 </html>
