--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -4,6 +4,8 @@
 <head>
   <link rel="shortcut icon" href="img/fave.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -14,38 +16,86 @@
       </div>
     </div>
   </div>
-  
-	<% require 'pry' %>
-  <div class="container-fluid">
-    <div class="row-fluid">
-   	  <div class="span10">
-		  	<% if @tweets != [] %>
-<!--  		<% num = 0 %> -->
+<!-- 	<div class='wrapper'>
+	
+	
+	</div> -->
+	<div id="page">
+    <div id="primary">
+        <div class='all-tweets'>
+	<% if @tweets != [] %>
+ 		<% num = 0 %>
           <% @tweets[0].each do |tweet| %>
-        <div class="container" >
-<!--      <% num = num +1 %> -->
-<!--      <% puts @tweets[0] %> -->
-			    <% #binding.pry %>
-         <p>Name: <%= "#{tweet[:name]}" %></p>
-         <p>Search Query: <%= "#{tweet[:query]}" %></p>
-			   <p>Link: <%= "#{tweet[:url]}" %></p>
-<!-- 			<% num += 1 %> -->
-        </div><br><br><br>
+		<div class='tweet'>
+         <p>Name: <%#= "#{tweet[:name]}" %></p>
+         <p>Search Query: <%#= "#{tweet[:query]}" %></p>
+			   <p>Link: <%#= "#{tweet[:url]}" %></p>
+			<% num += 1 %>
+			
+		</div>
+					<hr>
 			<% end %>
 			<% else %>
 			  <% puts "no tweets recieved" %>
 			<% end %>
+	
+	
+	</div>
+			
+			<div class='all-posts'>
+			hey
 		</div>
-      <!--Body content-->
-			<div class="span10">
-			<p>Welcome Back <%= session[:name] %> </p>
     </div>
-  </div>
+		
 </div>
+	<script>/* 
+This is just to create equal heights among the boxes.
+Borrowed from this Pen: http://codepen.io/micahgodbolt/pen/FgqLc
 
-	
-	
-	
+Thanks to CSS Tricks for pointing out this bit of jQuery
+http://css-tricks.com/equal-height-blocks-in-rows/
+It's been modified into a function called at page load and then each time the page is resized. One large modification was to remove the set height before each new calculation. */
+
+equalheight = function(container){
+
+var currentTallest = 0,
+     currentRowStart = 0,
+     rowDivs = new Array(),
+     $el,
+     topPosition = 0;
+ $(container).each(function() {
+
+   $el = $(this);
+   $($el).height('auto')
+   topPostion = $el.position().top;
+
+   if (currentRowStart != topPostion) {
+     for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
+       rowDivs[currentDiv].height(currentTallest);
+     }
+     rowDivs.length = 0; // empty the array
+     currentRowStart = topPostion;
+     currentTallest = $el.height();
+     rowDivs.push($el);
+   } else {
+     rowDivs.push($el);
+     currentTallest = (currentTallest < $el.height()) ? ($el.height()) : (currentTallest);
+  }
+   for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
+     rowDivs[currentDiv].height(currentTallest);
+   }
+ });
+}
+
+$(window).load(function() {
+  equalheight('div');
+});
+
+
+$(window).resize(function(){
+  equalheight('div');
+});
+</script>
 </body>
 
 </html>
