--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -12,7 +12,11 @@
   <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header" >
-        <p></p>
+        <a class="navbar-brand" href="#">StatisHub</a>
+        <ul class="nav navbar-nav">
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -23,28 +27,28 @@
 	<div id="page">
     <div id="primary">
         <div class='all-tweets'>
-	<% if @tweets != [] %>
- 		<% num = 0 %>
+	        <% if @tweets != [] %>
+ 	      	<% num = 0 %>
           <% @tweets[0].each do |tweet| %>
-		<div class='tweet'>
-         <p>Name: <%#= "#{tweet[:name]}" %></p>
-         <p>Search Query: <%#= "#{tweet[:query]}" %></p>
-			   <p>Link: <%#= "#{tweet[:url]}" %></p>
-			<% num += 1 %>
+		        <div class='tweet'>
+              <p>Name: <%#= "#{tweet[:name]}" %></p>
+              <p>Search Query: <%#= "#{tweet[:query]}" %></p>
+			        <p>Link: <%#= "#{tweet[:url]}" %></p>
+			        <% num += 1 %>
 			
-		</div>
+		         </div>
 					<hr>
-			<% end %>
-			<% else %>
-			  <% puts "no tweets recieved" %>
-			<% end %>
+			    <% end %>
+			  <% else %>
+			    <% puts "no tweets recieved" %>
+			  <% end %>
 	
 	
-	</div>
+	    </div>
 			
 			<div class='all-posts'>
-			hey
-		</div>
+			  <
+		  </div>
     </div>
 		
 </div>
