--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,23 +2,32 @@ html {
 	width:100%;
 	height:100%;
 }
+
 body {
 	width:100%;
 	height:100%;
 }
+
 .all-tweets {
 	padding-top:50px;
 	padding-left:50px;
 	float:left;
 }
+
 .tweet {
 	padding-bottom:50px;
 }
+
+.fb {
+  padding-bottom:50px;
+}
+
 .all-posts {
 	padding-top:50px;
 	padding-right:50px;
 	float:right;
 }
+
 hr {
 	height:5px;
 	width:450px;
