--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,15 @@
 html {
 	width:100%;
 	height:100%;
+	font-family:helvetica;
+	color:white;
 }
 
 body {
 	width:100%;
 	height:100%;
+		font-family:helvetica;
+	color:white;
 }
 
 .all-tweets {
