--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -4,8 +4,6 @@
 <head>
   <link rel="shortcut icon" href="img/fave.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -20,102 +18,48 @@
       </div>
     </div>
   </div>
-<!-- 	<div class='wrapper'>
 	
 	
-	</div> -->
-	<div id="page">
-    <div id="primary">
-        <div class='all-tweets'>
-					<h1>Trending Tweets</h1>
-	        <% if @tweets != [] %>
- 	      	<% num = 0 %>
-          <% @tweets[num].each do |tweet| %>
-		        <div class='tweet'>
-              <p>Name: <%= "#{tweet[:name]}" %></p>
-              <p>Search Query: <%= "#{tweet[:query]}" %></p>
-			        <p>Link: <%= "#{tweet[:url]}" %></p>
-			        <% num += 1 %>
-			
-		         </div>
-					<hr>
-			    <% end %>
-			  <% else %>
-			    <% puts "no tweets recieved" %>
-			  <% end %>
 	
-	
-	    </div>
-			
-			<div class='all-posts'>
-				<h1>Facebook Posts</h1>
-				<% num = 0 %>
-				<% while num < 21 do %>
-				<div class='fb'>
-				<p><%= @pic[num] %></p>
-				<p><%= @from[num] %></p>
-				<p><%= @cap[num] %></p>
-				<p><%= @desc[num] %></p>
-				</div>
-				<hr><br><br><br>
+	<div style="float:left;margin-left:100px;">
+
+		<h1 class="text-center">Top Ten Tweets</h1>
+								
+		<% if @tweets != [] %>
+ 	  	<% num = 0 %>
+      <% @tweets[num].each do |tweet| %>
+		  	<div style="width:500px;max-width:500px;padding:50px;background:#3b5998;">
 					
-					<% num += 1 %>
-				<% end %>
-
-
-		  </div>
-    </div>
+        	<p>Name: <%= "#{tweet[:name]}" %></p>
+			  	<p>Link: <%= "#{tweet[:url]}" %></p>
+			  	<% num += 1 %>
+					
+		   	</div>
+			<% end %>
+		<% else %>
+			<% puts "no tweets recieved" %>
+		<% end %>
 		
-</div>
-	<script>/* 
-This is just to create equal heights among the boxes.
-Borrowed from this Pen: http://codepen.io/micahgodbolt/pen/FgqLc
+	</div>
 
-Thanks to CSS Tricks for pointing out this bit of jQuery
-http://css-tricks.com/equal-height-blocks-in-rows/
-It's been modified into a function called at page load and then each time the page is resized. One large modification was to remove the set height before each new calculation. */
+	<div style="margin-left:850px;margin-top:40px;">
 
-equalheight = function(container){
-
-var currentTallest = 0,
-     currentRowStart = 0,
-     rowDivs = new Array(),
-     $el,
-     topPosition = 0;
- $(container).each(function() {
-
-   $el = $(this);
-   $($el).height('auto')
-   topPostion = $el.position().top;
-
-   if (currentRowStart != topPostion) {
-     for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
-       rowDivs[currentDiv].height(currentTallest);
-     }
-     rowDivs.length = 0; // empty the array
-     currentRowStart = topPostion;
-     currentTallest = $el.height();
-     rowDivs.push($el);
-   } else {
-     rowDivs.push($el);
-     currentTallest = (currentTallest < $el.height()) ? ($el.height()) : (currentTallest);
-  }
-   for (currentDiv = 0 ; currentDiv < rowDivs.length ; currentDiv++) {
-     rowDivs[currentDiv].height(currentTallest);
-   }
- });
-}
-
-$(window).load(function() {
-  equalheight('div');
-});
-
-
-$(window).resize(function(){
-  equalheight('div');
-});
-</script>
-    <br>
+		<h1 class="text-center"style='margin-right:60px;'>Top Ten Posts</h1>
+			
+			<% num = 0 %>
+			<% while num < 21 do %>
+				<div style="width:500px;max-width:500px;padding:50px;background:#3b5998;">
+						
+					<p><%= @pic[num] %></p>
+					<p><%= @from[num] %></p>
+					<p><%= @cap[num] %></p>
+					<p><%= @desc[num] %></p>
+					
+				</div>
+				<% num += 1 %>
+			<% end %>
+	</div>
+	
 </body>
 
 </html>
