finished formating tweets and posts correctly

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -28,7 +28,7 @@
 		<% if @tweets != [] %>
  	  	<% num = 0 %>
       <% @tweets[num].each do |tweet| %>
-		  	<div style="width:500px;max-width:500px;padding:50px;background:#3b5998;">
+		  	<div style="width:500px;max-width:500px;padding:50px;background:#00aced;">
 					
         	<p>Name: <%= "#{tweet[:name]}" %></p>
 			  	<p>Link: <%= "#{tweet[:url]}" %></p>
