--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -10,7 +10,7 @@
   <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header" >
-        <a class="navbar-brand" href="#" onclick='unfade(getElementById("posts"));unfade(getElementById("tweets"))'>StatisHub</a>
+        <a class="navbar-brand" href="#" onclick='unfade(getElementById("posts"));unfade(getElementById("tweets"))'>StatusHub</a>
         <ul class="nav navbar-nav">
           <li><a href="#" onclick='fade(getElementById("posts"));unfade(getElementById("tweets"))'>Twitter</a></li>
           <li><a href="#" onclick='fade(getElementById("tweets"));unfade(getElementById("posts"))'>Facebook</a></li>
